// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<div
  className="Radio__RadioContainer-sc-3ox61a-1 kLMXSr"
  disabled={false}
>
  <input
    checked={true}
    className="Radio__RadioInput-sc-3ox61a-2 kZoAlA"
    id={null}
    name={null}
    onBlur={null}
    onChange={null}
    onFocus={null}
    type="radio"
    value={null}
  />
  <label
    className="Typography__StyledLabel-sc-19auepv-0 gxLOic"
    fontSize="0.876em"
    fontWeight={400}
    htmlFor={null}
    letterSpacing="0.2px"
  >
    Radio
  </label>
</div>
`;

exports[` 2`] = `
Array [
  <div
    className="Bar__BarLayout-icfo76-2 gJPHni"
    id={null}
    onClick={null}
  >
    <div
      className="Bar__Slot-icfo76-1 hCkezQ"
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-check fa-w-16 Icon__StyledIcon-sc-1oa9m1v-1 jCGBwS"
        color="success80"
        data-icon="check"
        data-prefix="far"
        focusable="false"
        fontSize="1.35em"
        id={null}
        role="img"
        style={Object {}}
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M435.848 83.466L172.804 346.51l-96.652-96.652c-4.686-4.686-12.284-4.686-16.971 0l-28.284 28.284c-4.686 4.686-4.686 12.284 0 16.971l133.421 133.421c4.686 4.686 12.284 4.686 16.971 0l299.813-299.813c4.686-4.686 4.686-12.284 0-16.971l-28.284-28.284c-4.686-4.686-12.284-4.686-16.97 0z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </div>
    <div
      className="Bar__Slot-icfo76-1 yvaBx"
    >
      <div
        className="Radio__RadioContainer-sc-3ox61a-1 kLMXSr"
        disabled={false}
      >
        <input
          checked={null}
          className="Radio__RadioInput-sc-3ox61a-2 kZoAlA"
          id={null}
          name={null}
          onBlur={null}
          onChange={null}
          onFocus={null}
          type="radio"
          value={null}
        />
        <label
          className="Typography__StyledLabel-sc-19auepv-0 gxLOic"
          fontSize="0.876em"
          fontWeight={400}
          htmlFor={null}
          letterSpacing="0.2px"
        >
          Brief Label
        </label>
      </div>
    </div>
  </div>,
  <div
    className="Bar__BarLayout-icfo76-2 gJPHni"
    id={null}
    onClick={null}
  >
    <div
      className="Bar__Slot-icfo76-1 hCkezQ"
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-times fa-w-10 Icon__StyledIcon-sc-1oa9m1v-1 eMVSfb"
        color="alert80"
        data-icon="times"
        data-prefix="far"
        focusable="false"
        fontSize="1.35em"
        id={null}
        role="img"
        style={Object {}}
        viewBox="0 0 320 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M207.6 256l107.72-107.72c6.23-6.23 6.23-16.34 0-22.58l-25.03-25.03c-6.23-6.23-16.34-6.23-22.58 0L160 208.4 52.28 100.68c-6.23-6.23-16.34-6.23-22.58 0L4.68 125.7c-6.23 6.23-6.23 16.34 0 22.58L112.4 256 4.68 363.72c-6.23 6.23-6.23 16.34 0 22.58l25.03 25.03c6.23 6.23 16.34 6.23 22.58 0L160 303.6l107.72 107.72c6.23 6.23 16.34 6.23 22.58 0l25.03-25.03c6.23-6.23 6.23-16.34 0-22.58L207.6 256z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </div>
    <div
      className="Bar__Slot-icfo76-1 yvaBx"
    >
      <div
        className="Radio__RadioContainer-sc-3ox61a-1 kLMXSr"
        disabled={false}
      >
        <input
          checked={null}
          className="Radio__RadioInput-sc-3ox61a-2 kZoAlA"
          id={null}
          name={null}
          onBlur={null}
          onChange={null}
          onFocus={null}
          type="radio"
          value={null}
        />
        <label
          className="Typography__StyledLabel-sc-19auepv-0 gxLOic"
          fontSize="0.876em"
          fontWeight={400}
          htmlFor={null}
          letterSpacing="0.2px"
        >
          Radio with a long label because you cannot be concise with your words.
        </label>
      </div>
    </div>
  </div>,
]
`;

exports[` 3`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 dGwfwW"
  id={null}
  rows={null}
>
  <div
    className="Radio__RadioContainer-sc-3ox61a-1 kLMXSr"
    disabled={false}
  >
    <input
      checked={true}
      className="Radio__RadioInput-sc-3ox61a-2 kZoAlA"
      id={null}
      name={null}
      onBlur={null}
      onChange={null}
      onFocus={null}
      type="radio"
      value={null}
    />
    <label
      className="Typography__StyledLabel-sc-19auepv-0 gxLOic"
      fontSize="0.876em"
      fontWeight={400}
      htmlFor={null}
      letterSpacing="0.2px"
    >
      Selected
    </label>
  </div>
  <div
    className="Radio__RadioContainer-sc-3ox61a-1 kLMXSr"
    disabled={false}
  >
    <input
      checked={null}
      className="Radio__RadioInput-sc-3ox61a-2 kZoAlA"
      id={null}
      name={null}
      onBlur={null}
      onChange={null}
      onFocus={null}
      type="radio"
      value={null}
    />
    <label
      className="Typography__StyledLabel-sc-19auepv-0 gxLOic"
      fontSize="0.876em"
      fontWeight={400}
      htmlFor={null}
      letterSpacing="0.2px"
    >
      Unselected
    </label>
  </div>
  <div
    className="Radio__RadioContainer-sc-3ox61a-1 fXxza-D"
    disabled={true}
  >
    <input
      checked={null}
      className="Radio__RadioInput-sc-3ox61a-2 fEqiTX"
      id={null}
      name={null}
      onBlur={null}
      onChange={null}
      onFocus={null}
      tabIndex="-1"
      type="radio"
      value={null}
    />
    <label
      className="Typography__StyledLabel-sc-19auepv-0 gxLOic"
      fontSize="0.876em"
      fontWeight={400}
      htmlFor={null}
      letterSpacing="0.2px"
    >
      Disabled
    </label>
  </div>
</section>
`;

exports[` 4`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 dGwfwW"
  id={null}
  rows={null}
>
  <div
    className="Radio__RadioContainer-sc-3ox61a-1 kLMXSr"
    disabled={false}
  >
    <input
      checked={null}
      className="Radio__RadioInput-sc-3ox61a-2 kZoAlA"
      id={null}
      name={null}
      onBlur={null}
      onChange={null}
      onFocus={null}
      type="radio"
      value={null}
    />
    <label
      className="Typography__StyledLabel-sc-19auepv-0 gxLOic"
      fontSize="0.876em"
      fontWeight={400}
      htmlFor={null}
      letterSpacing="0.2px"
    >
      Left Aligned
    </label>
  </div>
  <div
    className="Radio__RadioContainer-sc-3ox61a-1 fnvrlf"
    disabled={false}
  >
    <input
      checked={null}
      className="Radio__RadioInput-sc-3ox61a-2 kZoAlA"
      id={null}
      name={null}
      onBlur={null}
      onChange={null}
      onFocus={null}
      type="radio"
      value={null}
    />
    <label
      className="Typography__StyledLabel-sc-19auepv-0 gxLOic"
      fontSize="0.876em"
      fontWeight={400}
      htmlFor={null}
      letterSpacing="0.2px"
    >
      Right Aligned
    </label>
  </div>
</section>
`;

exports[` 5`] = `
<form
  action={null}
  className="Form__FormWrapper-v2wrel-0 geeIqY"
  id={null}
  method={null}
  onSubmit={null}
>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 dGwfwW Form__Inputs-v2wrel-3 dLfNrm"
    id={null}
    rows={null}
  >
    <section
      className="Form__Section-v2wrel-2 dIXoJq"
    >
      <h5
        className="Typography__TitleText-sc-19auepv-2 KxMwb"
        fontSize="1.15em"
        fontWeight={400}
        letterSpacing="0px"
      >
        Radio Group (2 Columns)
      </h5>
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 ceKbHJ Radio__RadioWrapper-sc-3ox61a-0 kzzMRw"
        id={null}
        rows={null}
      >
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 JteBi Radio__InputGroup-sc-3ox61a-3 dyYMNc"
          id={null}
          rows={null}
        >
          <div
            className="Radio__RadioContainer-sc-3ox61a-1 kLMXSr"
            disabled={false}
          >
            <input
              checked={null}
              className="Radio__RadioInput-sc-3ox61a-2 kZoAlA"
              id="radio-1"
              name="radio-group"
              onBlur={null}
              onChange={null}
              onFocus={null}
              type="radio"
              value="1"
            />
            <label
              className="Typography__StyledLabel-sc-19auepv-0 gxLOic"
              fontSize="0.876em"
              fontWeight={400}
              htmlFor="radio-1"
              letterSpacing="0.2px"
            >
              Radio 1
            </label>
          </div>
          <div
            className="Radio__RadioContainer-sc-3ox61a-1 kLMXSr"
            disabled={false}
          >
            <input
              checked={null}
              className="Radio__RadioInput-sc-3ox61a-2 kZoAlA"
              id="radio-2"
              name="radio-group"
              onBlur={null}
              onChange={null}
              onFocus={null}
              type="radio"
              value="2"
            />
            <label
              className="Typography__StyledLabel-sc-19auepv-0 gxLOic"
              fontSize="0.876em"
              fontWeight={400}
              htmlFor="radio-2"
              letterSpacing="0.2px"
            >
              Radio 2
            </label>
          </div>
          <div
            className="Radio__RadioContainer-sc-3ox61a-1 kLMXSr"
            disabled={false}
          >
            <input
              checked={null}
              className="Radio__RadioInput-sc-3ox61a-2 kZoAlA"
              id="radio-3"
              name="radio-group"
              onBlur={null}
              onChange={null}
              onFocus={null}
              type="radio"
              value="3"
            />
            <label
              className="Typography__StyledLabel-sc-19auepv-0 gxLOic"
              fontSize="0.876em"
              fontWeight={400}
              htmlFor="radio-3"
              letterSpacing="0.2px"
            >
              Radio 3
            </label>
          </div>
          <div
            className="Radio__RadioContainer-sc-3ox61a-1 kLMXSr"
            disabled={false}
          >
            <input
              checked={null}
              className="Radio__RadioInput-sc-3ox61a-2 kZoAlA"
              id="radio-4"
              name="radio-group"
              onBlur={null}
              onChange={null}
              onFocus={null}
              type="radio"
              value="4"
            />
            <label
              className="Typography__StyledLabel-sc-19auepv-0 gxLOic"
              fontSize="0.876em"
              fontWeight={400}
              htmlFor="radio-4"
              letterSpacing="0.2px"
            >
              Radio 4
            </label>
          </div>
        </section>
      </section>
    </section>
  </section>
</form>
`;
